--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -142,6 +142,16 @@ main {
   background: rgba(178, 10, 44, 0.5);
   color: white;
   border: 1px solid white;
+  font-size: 1.4rem;
+}
+
+.projects a {
+  color: white;
+  text-decoration: none;
+}
+
+.projects a:hover {
+  text-decoration: underline;
 }
 
 /* !FOOTER */
